--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,13 @@ body {
     background-color: #D8F2F1;
 }
 .left-column {
-    /* width: 800px; */
     margin-top: 20px;
     margin-left: 30%;
-    /* float: left; */
 }
 .left-column img {
     width: 800px;
 }
-.bottom-link {
+.top-link {
     margin-top: 9%;
     margin-left: 50%;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
@@ -35,4 +33,20 @@ h1 {
 p {
     font-size: 50px;
     color: #E56E1A;
+}
+nav {
+    font-size: 50px;
+    margin-left: 30%;
+    margin-top: 10%;
+    
+}
+nav > a {
+    color:#336667;
+    padding: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: #E56E1A;
+    border-radius: 40px;
+    text-decoration: none;
+    
 }
